19990908-17:00 GMT+2 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.y
        * corrected handling of parenthesized expressions
        * corrected generation of pcodes for declaration of dimensioned
        array variables ( LOCAL var[ 2, 4 ] ) -  there is no longer POP
        opcode between array dimensions

    *source/vm/hvm.c
        + added code that creates multi-dimensioned arrays
        (arrays declared by LOCAL arr[ 3, 5, getDim() ] - it 
        supports PRIVATE and PUBLIC declaration too)

    *source/rtl/arrays.c
        + added functions hb_arrayGetItemPointer() which returns a pointer
        to an item occcupied by a specified array element

    *include/extend.h
        + added declaration of hb_arrayGetItemPointer() function

    *tests/broken/parexpr.prg
        ! moved to tests/working directory
        + added some code to test IF and IIF expressions (it is really
        related to parenthesized expressions)

    *tests/working/Makefile
        + added parexpr.prg

19990908-10:30 EDT David G. Holm <dholm@jsd-llc.com>
  * source/rtl/environ.c
    ! I restored the Windows #ifdef #include block from the 1.43 version,
      but kept the #define WIN32_LEAN_AND_MEAN from the 1.45 version.
  * source/rtl/set.c
    ! For _SET_COLOR case, only pass an argument to hb_setColor() if
      the 2nd SET argument is a string. Otherwise pass (char *) NULL.
  * source/vm/hvm.c
    * Moved hb_inkeyPoll() to the HB_P_DO case to enhance performance.

19990908-12:36 GMT+1 Antonio Linares <alinares@fivetech.com>
  * source/tools/debug.c
    + Added new function HB___GETLOCAL() to retrieve local variable containts.
    (see debug.c for GetLocal() use documentation).
  * source/debug/debugger.prg
    * First propotipe retrieving local variables values
    (still it is missing removing locals once a procedure is over.
     Editing is not implemented yet).

19990908-05:05 EDT Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/inkey.c