@@ -1,3 +1,8 @@
+19990908-11:56 EDT Paul Tucker <ptucker@sympatico.ca>
+  * source/rtl/gtapi.c
+    * modified SetColor to accept a null pointer, and do nothing
+    * changed so that "" resets colors to Clipper default.
+
 19990908-17:00 GMT+2 Ryszard Glab <rglab@imid.med.pl>
 
     *source/compiler/harbour.y
